use bootstrap spinner - show/hide nodes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Xml Fly</a>
-      <form class="form-inline navbar-nav mr-auto">
-          <label class="btn btn-default btn-outline-secondary btn-file">
-              Open <input type="file" (change)="onFileChange($event)">
-          </label>
-      </form>
+        <form class="form-inline navbar-nav mr-auto">
+
+            <label class="btn btn-primary btn-file" *ngIf="!loading">
+                Open <input type="file" (change)="onFileChange($event)">
+            </label>
+
+            <button *ngIf="loading"
+                class="btn btn-primary" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+            </button>
+
+        </form>
 </nav>
 
-<div *ngIf="loading">
-    <app-loader></app-loader>
-</div>
-
 <div class="m-3" *ngIf="!loading && xmlFileContent">
-  <app-xml-view [xmlString]="xmlFileContent"></app-xml-view>
+    <app-xml-view [xmlString]="xmlFileContent"></app-xml-view>
 </div>
