--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,20 @@
 <nav class="navbar navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Xml Fly</a>
-        <form class="form-inline navbar-nav mr-auto">
 
-            <label class="btn btn-primary btn-file" *ngIf="!loading">
-                Open <input type="file" (change)="onFileChange($event)">
-            </label>
+    <form class="form-inline navbar-nav mr-auto">
 
-            <button *ngIf="loading"
-                class="btn btn-primary" type="button" disabled>
-                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                Loading...
-            </button>
+        <label class="btn btn-primary btn-file" *ngIf="!loading">
+            <fa-icon class="mr-1" [icon]="['far', 'folder-open']"></fa-icon>
+            Open <input type="file" (change)="onFileChange($event)">
+        </label>
 
-        </form>
+        <button *ngIf="loading"
+            class="btn btn-primary" type="button" disabled>
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Loading...
+        </button>
+
+    </form>
 </nav>
 
 <div class="m-3" *ngIf="!loading && xmlFileContent">
