--- a/src/app/node/node.component.scss
+++ b/src/app/node/node.component.scss
@@ -2,6 +2,7 @@
     border: 1px solid #d8d8d8;
     border-width: 1px 0 0 1px;
     background-color: white;
+    line-height: 1.7rem;
 
     &.selected {
         background-color: #f5f5f5;
