change font library

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <form class="form-inline navbar-nav mr-auto">
 
         <label class="btn btn-primary btn-file" *ngIf="!loading">
-            <fa-icon class="mr-1" [icon]="['far', 'folder-open']"></fa-icon>
+            <i class="material-icons">folder_open</i>
             Open <input type="file" (change)="onFileChange($event)">
         </label>
 
