--- a/src/app/node/node.component.scss
+++ b/src/app/node/node.component.scss
@@ -1,29 +1,37 @@
 .node {
-    border: 1px solid #d8d8d8;
-    border-width: 1px 0 0 1px;
+    border-left: 3px solid #d8d8d8;
+    border-top: 1px solid #d8d8d8;
     background-color: white;
 
-    &.selected {
-        background-color: #f5f5f5;
+    &.odd {
+        background-color: #efefef;
+    }
 
-        & > .inner {
-            border-left-color: #007eff;
-        }
+    &.selected {
+        border-left-color: #007eff;
+    }
+
+    .material-icons {
+        margin: .25rem 0 0 .25rem;
     }
 
     .btn-sm {
         line-height: 1;
+
+        .material-icons {
+            margin: 0;
+        }
     }
 
     .indent {
         padding-left: 2.1em;
     }
 
-    .tagname {
+    .name {
         flex: 0 0 20%;
     }
 
-    .textcontent {
+    .value {
         flex: 1 1 80%;
         word-break: break-all;
     }
