--- a/src/app/node/node.component.scss
+++ b/src/app/node/node.component.scss
@@ -1,14 +1,11 @@
 .node {
-    border-left: 3px solid #d8d8d8;
+    border-left: 1px solid #d8d8d8;
     border-top: 1px solid #d8d8d8;
     background-color: white;
+    font-size: .8rem;
 
     &.odd {
         background-color: #efefef;
-    }
-
-    &.selected {
-        border-left-color: #007eff;
     }
 
     .material-icons {
@@ -17,27 +14,22 @@
 
     .btn-sm {
         line-height: 1;
+        padding: 0;
 
         .material-icons {
             margin: 0;
         }
     }
 
-    .indent {
-        padding-left: 2.1em;
-    }
-
     .name {
-        flex: 0 0 20%;
+        width: 100px;
     }
 
     .value {
-        flex: 1 1 80%;
-        word-break: break-all;
-    }
-
-    .collapsed {
-        display: none;
+        width: 120px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .inner {
