improve array display

--- a/src/app/node/node.component.scss
+++ b/src/app/node/node.component.scss
@@ -4,6 +4,10 @@
     background-color: white;
     font-size: .8rem;
 
+    &.noTagName {
+        border: 0;
+    }
+
     &.odd {
         background-color: #efefef;
     }
