--- a/src/app/array/array.component.html
+++ b/src/app/array/array.component.html
@@ -1,38 +1,58 @@
 <div class="border-top border-left">
 
-  <div class="p-1">
-    <span class="font-weight-bold">
+  <div>
+
+    <!-- expand / collapse button -->
+    <ng-container>
+      <button class="btn btn-sm" 
+        [hidden]="!collapsed"
+        (click)="show($event)">
+        <i class="material-icons">expand_more</i>
+      </button>
+      <button class="btn btn-sm" 
+        [hidden]="collapsed"
+        (click)="hide($event)">
+        <i class="material-icons">expand_less</i>
+      </button>
+    </ng-container>
+
+    <span class="font-weight-bold p-1">
       {{ nodes[0].tagName }}
     </span>
-    <span>
+    <span class="p-1">
       ({{ nodes.length }})
     </span>
   </div>
 
-  <table class="border-top border-left ml-3">
-      <thead>
-        <tr>
-          <th></th>
-          <th class="p-1"
-          *ngFor="let childNode of nodes[0].childNodes">
-            {{ childNode.tagName }}
-          </th>
-        </tr>
-      </thead>
-    
-      <tbody>
-        <tr *ngFor="let node of nodes; let i = index">
-          <td class="p-1">
-            {{ i }}
-          </td>
-          <td class=""
-              *ngFor="let childNode of node.childNodes">
-            <app-node [node]="childNode" [arrayInParent]="true" [noTagName]="true"></app-node>
-          </td>
-        </tr>
-      </tbody>
-    
-    
-    </table>
+  <div class="ml-3">
+    <table class="border-top border-left" [hidden]="collapsed">
+        <thead *ngIf="!isTextNode(nodes[0])">
+          <tr>
+            <th class="p-1">#</th>
+            <th class="p-1"
+            *ngFor="let childNode of nodes[0].childNodes">
+              {{ childNode.tagName }}
+            </th>
+          </tr>
+        </thead>
+      
+        <tbody>
+          <tr *ngFor="let node of nodes; let i = index">
+            <td class="p-1">
+              {{ i }}
+            </td>
+            <td class="p-1" *ngIf="isTextNode(node)">
+              {{ node.textContent }}            
+            </td>
+            <ng-container *ngIf="!isTextNode(node)">
+              <td class="" *ngFor="let childNode of node.childNodes">
+                <app-node [node]="childNode" [arrayInParent]="true" [noTagName]="true"></app-node>
+              </td>      
+            </ng-container>
+          </tr>
+        </tbody>
+      </table>
+  </div>
+
 </div>
 
