--- a/src/app/array/array.component.scss
+++ b/src/app/array/array.component.scss
@@ -1,8 +1,28 @@
 table {
+    width: 100%;
+
     tr {
         td {
             vertical-align: top;
-            border: 1px solid #d8d8d8;
+            border-top: 1px solid #d8d8d8;
+            border-left: 1px solid #d8d8d8;
         }
+
+        td:first-child {
+            border-left: 0;
+        }
+    }
+}
+
+.material-icons {
+    margin: .25rem 0 0 .25rem;
+}
+
+.btn-sm {
+    line-height: 1;
+    padding: 0;
+
+    .material-icons {
+        margin: 0;
     }
 }
