--- a/src/app/node/node.component.html
+++ b/src/app/node/node.component.html
@@ -1,19 +1,20 @@
 <div *ngIf="node.tagName"
+  [class.noTagName]="noTagName"
   class="node">
 
   <div class="header d-flex flex-row">
     <!-- expand / collapse button -->
     <ng-container *ngIf="!isTextNode()">
-      <div class="btn btn-sm" 
+      <button class="btn btn-sm" 
         [hidden]="!collapsed"
         (click)="show($event)">
         <i class="material-icons">expand_more</i>
-      </div>
-      <div class="btn btn-sm" 
+      </button>
+      <button class="btn btn-sm" 
         [hidden]="collapsed"
         (click)="hide($event)">
         <i class="material-icons">expand_less</i>
-      </div>
+      </button>
     </ng-container>
 
     <!-- tag name -->
@@ -23,7 +24,8 @@
     <div *ngIf="!noTagName" class="name p-1 font-weight-bold">
       {{ node.tagName }}
     </div>
-    <div *ngIf="isTextNode()" class="value border-left p-1">
+    <div *ngIf="isTextNode()" class="value p-1"
+        [class.border-left]="!noTagName">
       {{ node.textContent }}
     </div>
   </div>
