improve display for large cells

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-dark bg-primary fixed-top">
     <a class="navbar-brand" href="#">Xml Fly</a>
 
     <form class="form-inline navbar-nav mr-auto">
@@ -17,6 +17,6 @@
     </form>
 </nav>
 
-<div *ngIf="!loading && xmlFileContent">
+<div class="mt-5 pt-2" *ngIf="!loading && xmlFileContent">
     <app-xml-view [xmlString]="xmlFileContent"></app-xml-view>
 </div>
