--- a/src/app/xml-view/xml-view.component.html
+++ b/src/app/xml-view/xml-view.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div *ngFor="let node of document.childNodes" 
-  class="m-1 border-bottom border-right shadow-sm">
+  class="m-2">
   <app-node [node]="node"></app-node>
 </div>
 
