--- a/src/app/array/array.component.scss
+++ b/src/app/array/array.component.scss
@@ -1,28 +1,35 @@
-table {
-    width: 100%;
+.array {
+    border-left: 3px solid #d8d8d8;
+    border-top: 1px solid #d8d8d8;
 
-    tr {
-        td {
-            vertical-align: top;
-            border-top: 1px solid #d8d8d8;
-            border-left: 1px solid #d8d8d8;
-        }
+    table {
+        width: 100%;
+        border-left: 3px solid #d8d8d8;
+        border-top: 1px solid #d8d8d8;
 
-        td:first-child {
-            border-left: 0;
+        tr {
+            td {
+                vertical-align: top;
+                border-left: 1px solid #d8d8d8;
+            }
+            
+            td:first-child {
+                border-left: 0;
+            }
+
         }
     }
-}
-
-.material-icons {
-    margin: .25rem 0 0 .25rem;
-}
-
-.btn-sm {
-    line-height: 1;
-    padding: 0;
-
+    
     .material-icons {
-        margin: 0;
+        margin: .25rem 0 0 .25rem;
+    }
+    
+    .btn-sm {
+        line-height: 1;
+        padding: 0;
+    
+        .material-icons {
+            margin: 0;
+        }
     }
 }
