--- a/src/app/array/array.component.html
+++ b/src/app/array/array.component.html
@@ -41,7 +41,7 @@
               {{ i }}
             </td>
             <td class="p-1" *ngIf="isTextNode(node)">
-              {{ node.textContent }}            
+              {{ getText(node) }}            
             </td>
             <ng-container *ngIf="!isTextNode(node)">
               <td class="" *ngFor="let childNode of node.childNodes">
