--- a/src/app/array/array.component.scss
+++ b/src/app/array/array.component.scss
@@ -1,20 +1,36 @@
 .array {
-    border-left: 3px solid #d8d8d8;
+    border-left: 1px solid #d8d8d8;
     border-top: 1px solid #d8d8d8;
+    background: white;
 
     table {
         width: 100%;
-        border-left: 3px solid #d8d8d8;
+        border-left: 1px solid #d8d8d8;
         border-top: 1px solid #d8d8d8;
 
         tr {
+
+            th {
+                border-left: 1px solid #d8d8d8;
+                background: #ffffbd;
+                font-weight: normal;
+            }
             td {
                 vertical-align: top;
                 border-left: 1px solid #d8d8d8;
+                padding: 0;
+                background: white;
             }
             
+            th:first-child,
             td:first-child {
                 border-left: 0;
+                text-align: right;
+            }
+
+            td:first-child {
+                border-top: 1px solid #d8d8d8;
+                background: #ffffbd;
             }
 
         }
