--- a/src/app/node/node.component.html
+++ b/src/app/node/node.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="node.tagName"
   [class.noTagName]="noTagName"
+  [class.first-node]="!node.parentNode.parentNode"
   class="node">
 
   <div class="header d-flex flex-row">
@@ -21,12 +22,14 @@
     <div *ngIf="isTextNode() && !noTagName" class="type">
       <i class="material-icons">code</i>
     </div>
-    <div *ngIf="!noTagName" class="name p-1 font-weight-bold">
+    <div *ngIf="!noTagName" class="p-1"
+      [class.font-weight-bold]="!isTextNode()"
+      [class.name]="isTextNode()">
       {{ node.tagName }}
     </div>
     <div *ngIf="isTextNode()" class="value p-1"
         [class.border-left]="!noTagName">
-      {{ node.textContent }}
+      {{ getText(node) }}
     </div>
   </div>
 
