--- a/src/app/node/node.component.scss
+++ b/src/app/node/node.component.scss
@@ -1,12 +1,14 @@
 .node {
-    border-left: 3px solid #d8d8d8;
+    border-left: 1px solid #d8d8d8;
     border-top: 1px solid #d8d8d8;
     font-size: .8rem;
     display: table;
     width: 100%;
+    background-color: white;
     
     &.noTagName {
         border: 0;
+        border-top: 1px solid #d8d8d8;
     }
 
     &.odd {
@@ -30,11 +32,23 @@
         overflow: hidden;
         text-overflow: ellipsis;
         word-break: break-all;
-        max-height: 4rem;
         min-width: 120px;
+    }
+
+    .name {
+        min-width: 100px;
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     .inner {
         border-left: 4px solid transparent;
     }
+}
+
+.first-node {
+    border-right: 1px solid #d8d8d8;
+    margin-right: 1rem;
 }
