--- a/src/app/node/node.component.scss
+++ b/src/app/node/node.component.scss
@@ -49,6 +49,7 @@
 }
 
 .first-node {
-    border-right: 1px solid #d8d8d8;
+    border: 0;
+    border-bottom: 1px solid #d8d8d8;
     margin-right: 1rem;
 }
