hold model in data service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,45 @@
-<div class="main d-flex flex-column">
+<div class="h-100 d-flex flex-column">
 
-        <nav class="nav nav-tabs bg-light px-2 pt-1">
-                <a class="navbar-brand" href="#">Xml Fly</a>
-            
-                <div class="nav-item" 
-                    *ngFor="let file of files">
-                    <a class="nav-link"
-                       [class.active]="file.selected"
-                       (click)="selectFile(file)"
-                       href="#">
-                        {{ file.name }}
-                    </a>
-                </div>
-            
-                <form class="ml-2 form-inline navbar-nav mr-auto">
-            
-                    <label class="btn btn-outline-primary btn-file" *ngIf="!loading">
-                        <i class="material-icons mr-1">folder_open</i>
-                        Open <input type="file" (change)="openFile($event)">
-                    </label>
-            
-                    <button *ngIf="loading"
-                        class="btn btn-outline-primary" type="button" disabled>
-                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                        Loading...
-                    </button>
-            
-                </form>
-            </nav>
-            
+    <nav class="nav nav-tabs bg-light px-2 pt-1">
+        <a class="navbar-brand" href="#">Xml Fly</a>
+    
+        <div class="nav-item" 
+            *ngFor="let file of files">
+            <a class="nav-link"
+                [class.active]="file.selected"
+                (click)="selectFile(file)"
+                href="#">
+                {{ file.name }}
+            </a>
+        </div>
+    
+        <form class="ml-2 form-inline navbar-nav mr-auto">
+    
+            <label class="btn btn-outline-primary btn-file" *ngIf="!loading">
+                <i class="material-icons mr-1">folder_open</i>
+                Open <input type="file" (change)="openFile($event)">
+            </label>
+    
+            <button *ngIf="loading"
+                class="btn btn-outline-primary" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+            </button>
+    
+        </form>
+    </nav>
+        
 
 
-            <div class="border-bottom flex-fill overflow-auto">
-                <div *ngFor="let file of files" [hidden]="!file.selected">
-                    <app-xml-view [xmlString]="file.xmlFileContent"></app-xml-view>
-                </div>
-            </div>
+    <div class="border-bottom flex-fill overflow-auto">
+        <div *ngFor="let file of files" [hidden]="!file.selected">
+            <app-xml-view [xmlString]="file.xmlFileContent"></app-xml-view>
+        </div>
+    </div>
+
+    <div>
+        <app-selection></app-selection>
+    </div>
 
 </div>
 
