--- a/src/app/xml-view/array/array.component.html
+++ b/src/app/xml-view/array/array.component.html
@@ -15,10 +15,10 @@
       </button>
     </ng-container>
 
-    <span class="font-weight-bold p-1">
+    <span class="tagname p-1">
       {{ nodes[0].tagName }}
     </span>
-    <span class="p-1">
+    <span class="py-1">
       ({{ nodes.length }})
     </span>
   </div>
