--- a/src/app/xml-view/array/array.component.scss
+++ b/src/app/xml-view/array/array.component.scss
@@ -3,6 +3,10 @@
     border-top: 1px solid #d8d8d8;
     background: white;
 
+    .header {
+        white-space: nowrap;
+    }
+
     .tagname {
         font-size: 1.1rem;
         font-weight: bold;
@@ -17,8 +21,9 @@
 
             th {
                 border-left: 1px solid #d8d8d8;
-                background: #e7f5ff;
+                background: #f8f8f8;
                 font-weight: normal;
+                white-space: nowrap;
             }
             td {
                 vertical-align: top;
@@ -35,22 +40,46 @@
 
             td:first-child {
                 border-top: 1px solid #d8d8d8;
-                background: #e7f5ff;
+                background: #f8f8f8;
             }
 
         }
     }
     
-    .material-icons {
-        margin: .25rem 0 0 .25rem;
-    }
-    
     .btn-sm {
         line-height: 1;
         padding: 0;
-    
-        .material-icons {
-            margin: 0;
+
+        .icon-expand, .icon-collapse {
+            background-repeat: no-repeat;
+            width: 1rem;
+            height: 1rem;
+            display: inline-block;
+            margin: .3rem;
         }
+
+        .icon-expand {
+            background-image: url(/assets/icons/plus-square-regular.svg);
+        }
+
+        .icon-collapse {
+            background-image: url(/assets/icons/minus-square-regular.svg);
+        }
+
     }
+}
+
+
+.icon-attr, .icon-tag {
+    font-size: .9rem;
+    font-weight: bold;
+    width: 1rem;
+    display: inline-block;
+    text-align: right;
+}
+.icon-tag {
+    color: #0095ff;
+}
+.icon-attr {
+    color: #ea7d1f;
 }
