--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,14 @@
 <div class="h-100 d-flex flex-column">
 
-    <nav class="nav nav-tabs bg-light px-2 pt-1">
+    <nav class="nav navbar-dark bg-primary px-2">
     
-        <div class="nav-item" 
+        <div class="nav-item m-1" 
             *ngFor="let file of files">
-            <a class="nav-link"
+            <button class="btn btn-sm btn-primary"
                 [class.active]="file.selected"
-                (click)="selectFile(file)"
-                href="#">
+                (click)="selectFile(file)">
                 {{ file.name }}
-            </a>
+            </button>
         </div>
     
         <form class="m-1 form-inline navbar-nav mr-auto">
