--- a/src/app/xml-view/array/array.component.scss
+++ b/src/app/xml-view/array/array.component.scss
@@ -59,11 +59,11 @@
         }
 
         .icon-expand {
-            background-image: url(/assets/icons/plus-square-regular.svg);
+            background-image: url(../../../assets/icons/plus-square-regular.svg);
         }
 
         .icon-collapse {
-            background-image: url(/assets/icons/minus-square-regular.svg);
+            background-image: url(../../../assets/icons/minus-square-regular.svg);
         }
 
     }
